--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-requests==2.31.0
-plotly==5.17.0
-TA-Lib==0.4.25
-python-binance==1.0.19
+streamlit>=1.36.0
+pandas>=2.2.2
+numpy>=2.0.2
+requests>=2.32.3
+plotly>=5.23.0
